WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268509
AX: Missing nullptr check for parentObjectUnignored in AccessibilityObject::isSelected()
https://bugs.webkit.org/show_bug.cgi?id=268509
Summary
AX: Missing nullptr check for parentObjectUnignored in AccessibilityObject::i...
Tyler Wilcock
Reported
2024-01-31 16:05:06 PST
This can cause a crash.
Attachments
Patch
(1.42 KB, patch)
2024-01-31 16:09 PST
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(7.92 KB, patch)
2024-01-31 22:38 PST
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(7.92 KB, patch)
2024-01-31 22:40 PST
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(7.92 KB, patch)
2024-01-31 22:41 PST
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(8.53 KB, patch)
2024-02-01 11:29 PST
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(8.57 KB, patch)
2024-02-01 12:57 PST
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-31 16:05:16 PST
<
rdar://problem/122049558
>
Tyler Wilcock
Comment 2
2024-01-31 16:06:34 PST
rdar://121945437
Tyler Wilcock
Comment 3
2024-01-31 16:09:23 PST
Created
attachment 469638
[details]
Patch
Tyler Wilcock
Comment 4
2024-01-31 22:38:31 PST
Created
attachment 469646
[details]
Patch
Tyler Wilcock
Comment 5
2024-01-31 22:40:50 PST
Created
attachment 469647
[details]
Patch
Tyler Wilcock
Comment 6
2024-01-31 22:41:41 PST
Created
attachment 469648
[details]
Patch
Andres Gonzalez
Comment 7
2024-02-01 07:36:14 PST
(In reply to Tyler Wilcock from
comment #6
)
> Created
attachment 469648
[details]
> Patch
--- /dev/null +++ b/LayoutTests/accessibility/menuitem-is-selected-crash.html Looks good, but my personal preference is not to include -crash in the name of tests. The test name should reflect the functionality being tested, and it is obvious crashes shouldn't happen. So including it in the names and code comments is useless.
Tyler Wilcock
Comment 8
2024-02-01 07:55:35 PST
(In reply to Andres Gonzalez from
comment #7
)
> (In reply to Tyler Wilcock from
comment #6
) > > Created
attachment 469648
[details]
> > Patch > > --- /dev/null > +++ b/LayoutTests/accessibility/menuitem-is-selected-crash.html > > Looks good, but my personal preference is not to include -crash in the name > of tests. The test name should reflect the functionality being tested, and > it is obvious crashes shouldn't happen. So including it in the names and > code comments is useless.
Agreed, thanks, will avoid doing this in future patches!
Tyler Wilcock
Comment 9
2024-02-01 11:29:38 PST
Created
attachment 469659
[details]
Patch
Tyler Wilcock
Comment 10
2024-02-01 11:30:24 PST
(In reply to Tyler Wilcock from
comment #8
)
> (In reply to Andres Gonzalez from
comment #7
) > > (In reply to Tyler Wilcock from
comment #6
) > > > Created
attachment 469648
[details]
> > > Patch > > > > --- /dev/null > > +++ b/LayoutTests/accessibility/menuitem-is-selected-crash.html > > > > Looks good, but my personal preference is not to include -crash in the name > > of tests. The test name should reflect the functionality being tested, and > > it is obvious crashes shouldn't happen. So including it in the names and > > code comments is useless. > Agreed, thanks, will avoid doing this in future patches!
TW: Turns out I had to submit another patch anyways to skip the test on WebKit 1, so I fixed this filename as well.
Tyler Wilcock
Comment 11
2024-02-01 12:57:52 PST
Created
attachment 469661
[details]
Patch
EWS
Comment 12
2024-02-01 20:14:08 PST
Committed
273971@main
(870d68c08769): <
https://commits.webkit.org/273971@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 469661
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug