AX: Missing nullptr check for parentObjectUnignored in AccessibilityObject::isSelected() https://bugs.webkit.org/show_bug.cgi?id=268509 rdar://121945437

Reviewed by Chris Fleizach and Andres Gonzalez.

parentObjectUnignored() can return nullptr, we need to check it before deferencing to avoid a crash.

* LayoutTests/accessibility-isolated-tree/TestExpectations:
Skip new test, as it exposes a bug that affects ITM.
* LayoutTests/accessibility/menuitem-is-selected-crash-expected.txt: Added.
* LayoutTests/accessibility/menuitem-is-selected-crash.html: Added.
* LayoutTests/platform/glib/TestExpectations: Skip new test.
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::computeAccessibilityIsIgnored const):
* Source/WebCore/accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::isSelected const):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::processQueuedNodeUpdates):
Drive-by fix to remove unnecessary HashMap::contains check, HashMap::ensure inherently does this
so the contains check was wasted work.

Canonical link: https://commits.webkit.org/273971@main